# dfu-programmer

./: 90-avr32dfu.rules  CMakeLists.txt  libtest.c
src/: dfu.c  lib_implementation.c  lib_implementation.h  main.c  util.c
